--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -33,6 +33,11 @@
   a > *
     color: $white
 
+//colot texto - Botones CF
+a.boton
+  i, span
+    color: $white
+
 @media (min-width: 992px)
   .desktop 
     display: inline
